--- a/templates/inc-header.html
+++ b/templates/inc-header.html
@@ -2,7 +2,7 @@
     <div id="logo">
         <div id="logo_text">
             <h1><a href="/"><span class="logo_colour">Архитектура и шаблоны проектирования на Python</span></a></h1>
-            <h2>Урок 3. Принципы проектирования</h2>
+            <h2>Урок 4. Порождающие паттерны</h2>
         </div>
     </div>
     <div id="menubar">
