--- a/templates/inc-style.html
+++ b/templates/inc-style.html
@@ -101,7 +101,7 @@
         }
 
         #header {
-            background: #6F655F url(header.png);
+            background: #6F655F;
             height: 270px;
             border-bottom: 1px solid #FFF;
         }
@@ -161,7 +161,7 @@
             padding: 0 0 0 6px;
             list-style: none;
             margin: 3px 2px 0 0;
-            background: #484848 url(tab.png) no-repeat 0 0;
+            background: #484848;
         }
 
         ul#menu li a {
@@ -173,16 +173,16 @@
             text-align: center;
             color: #FFF;
             text-decoration: none;
-            background: #484848 url(tab.png) no-repeat 100% 0;
+            background: #484848;
         }
 
         ul#menu li.selected {
             margin: 3px 2px 0 0;
-            background: #FCFDF4 url(tab_selected.png) no-repeat 0 0;
+            background: #FCFDF4;
         }
 
         ul#menu li.selected a, ul#menu li.selected a:hover {
-            background: #FCFDF4 url(tab_selected.png) no-repeat 100% 0;
+            background: #FCFDF4;
             color: #111;
         }
 
@@ -192,14 +192,8 @@
 
         #content_header, #content_footer {
             width: 928px;
-            background: url(content_header.png) no-repeat;
             height: 15px;
             margin-top: -90px;
-        }
-
-        #content_footer {
-            background: url(content_footer.png) no-repeat;
-            margin-top: 0;
         }
 
         #site_content {
@@ -219,11 +213,6 @@
         .sidebar_top, .sidebar_base {
             width: 222px;
             height: 14px;
-            background: transparent url(side_top.png) no-repeat;
-        }
-
-        .sidebar_base {
-            background: url(side_base.png) no-repeat;
         }
 
         .sidebar {
@@ -258,7 +247,6 @@
         .sidebar_item li a, .sidebar_item li a:hover {
             padding: 0 0 0 35px;
             display: block;
-            background: transparent url(link.png) no-repeat left center;
         }
 
         .sidebar_item li a.selected {
@@ -388,6 +376,10 @@
             background: #E5E5DB;
             color: #47433F;
             border-top: 1px solid #FFF;
+        }
+
+        .form_category {
+            margin: 20px;
         }
 
     </style>
