--- a/templates/inc-sidebar.html
+++ b/templates/inc-sidebar.html
@@ -25,45 +25,45 @@
     <div class="sidebar">
         <div class="sidebar_top"></div>
         <div class="sidebar_item1">
-{#            <!-- Gismeteo informer START -->#}
-{#            <link rel="stylesheet" type="text/css"#}
-{#                  href="https://ost1.gismeteo.ru/assets/flat-ui/legacy/css/informer.min.css">#}
-{#            <div id="gsInformerID-d85SBg4tUqiD1e" class="gsInformer" style="width:222px;height:117px">#}
-{#                <div class="gsIContent">#}
-{#                    <div id="cityLink">#}
-{#                        <a href="https://www.gismeteo.ru/weather-moscow-4368/" target="_blank" title="Погода в Москве">#}
-{#                            <img src="https://ost1.gismeteo.ru/assets/flat-ui/img/gisloader.svg" width="24" height="24"#}
-{#                                 alt="Погода в Москве">#}
-{#                        </a>#}
-{#                    </div>#}
-{#                    <div class="gsLinks">#}
-{#                        <table>#}
-{#                            <tr>#}
-{#                                <td>#}
-{#                                    <div class="leftCol">#}
-{#                                        <a href="https://www.gismeteo.ru/" target="_blank" title="Погода">#}
-{#                                            <img alt="Погода"#}
-{#                                                 src="https://ost1.gismeteo.ru/assets/flat-ui/img/logo-mini2.png"#}
-{#                                                 align="middle" border="0" width="11" height="16"/>#}
-{#                                            <img src="https://ost1.gismeteo.ru/assets/flat-ui/img/informer/gismeteo.svg"#}
-{#                                                 border="0" align="middle" style="left: 5px; top:1px">#}
-{#                                        </a>#}
-{#                                    </div>#}
-{#                                    <div class="rightCol">#}
-{#                                        <a href="https://www.gismeteo.ru/weather-moscow-4368/2-weeks/" target="_blank"#}
-{#                                           title="Погода в Москве на 2 недели">#}
-{#                                            <img src="https://ost1.gismeteo.ru/assets/flat-ui/img/informer/forecast-2weeks.ru.svg"#}
-{#                                                 border="0" align="middle" style="top:auto"#}
-{#                                                 alt="Погода в Москве на 2 недели">#}
-{#                                        </a>#}
-{#                                    </div>#}
-{#                                </td>#}
-{#                            </tr>#}
-{#                        </table>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#            <script async src="https://www.gismeteo.ru/api/informer/getinformer/?hash=d85SBg4tUqiD1e"></script>#}
+            <!-- Gismeteo informer START -->
+            <link rel="stylesheet" type="text/css"
+                  href="https://ost1.gismeteo.ru/assets/flat-ui/legacy/css/informer.min.css">
+            <div id="gsInformerID-d85SBg4tUqiD1e" class="gsInformer" style="width:222px;height:117px">
+                <div class="gsIContent">
+                    <div id="cityLink">
+                        <a href="https://www.gismeteo.ru/weather-moscow-4368/" target="_blank" title="Погода в Москве">
+                            <img src="https://ost1.gismeteo.ru/assets/flat-ui/img/gisloader.svg" width="24" height="24"
+                                 alt="Погода в Москве">
+                        </a>
+                    </div>
+                    <div class="gsLinks">
+                        <table>
+                            <tr>
+                                <td>
+                                    <div class="leftCol">
+                                        <a href="https://www.gismeteo.ru/" target="_blank" title="Погода">
+                                            <img alt="Погода"
+                                                 src="https://ost1.gismeteo.ru/assets/flat-ui/img/logo-mini2.png"
+                                                 align="middle" border="0" width="11" height="16"/>
+                                            <img src="https://ost1.gismeteo.ru/assets/flat-ui/img/informer/gismeteo.svg"
+                                                 border="0" align="middle" style="left: 5px; top:1px">
+                                        </a>
+                                    </div>
+                                    <div class="rightCol">
+                                        <a href="https://www.gismeteo.ru/weather-moscow-4368/2-weeks/" target="_blank"
+                                           title="Погода в Москве на 2 недели">
+                                            <img src="https://ost1.gismeteo.ru/assets/flat-ui/img/informer/forecast-2weeks.ru.svg"
+                                                 border="0" align="middle" style="top:auto"
+                                                 alt="Погода в Москве на 2 недели">
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <script async src="https://www.gismeteo.ru/api/informer/getinformer/?hash=d85SBg4tUqiD1e"></script>
             <!-- Gismeteo informer END -->
                             <h3>Search</h3>
                             <form method="post" action="#" id="search_form">
