--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,46 @@
 {% extends "base.html" %}
 {% set active_page = "index" %}
-{%  block title %}Главная{% endblock %}
+{% block title %}Главная{% endblock %}
 {% block style %}
     {% include "inc-style.html" %}
 {% endblock %}
 {% block header %}
     {% include "inc-header.html" %}
 {% endblock %}
-{%  block content %}
-<div id="site_content">
-    {% block sidebar %}
-        {% include "inc-sidebar.html" %}
-    {% endblock %}
-    <div id="content">
-        <h1>Список категорий</h1>
-        {% for item in objects_list %}
-        <li>
-            {{ item.name }} <span>Количество курсов: {{ item.courses_count() }}</span>
-            {% if item.courses_count() %}
-			    <a href="/courses-list/?id={{ item.id }}">Показать курсы</a>
-            {% else %}
-                <a href="/create-course/?id={{ item.id }}">Создать новый курс</a>
-            {% endif %}
-        </li>
-        {% endfor %}
-        <a href="/create_category/">Создать категорию</a>
+{% block content %}
+    <div id="site_content">
+        {% block sidebar %}
+            {% include "inc-sidebar.html" %}
+        {% endblock %}
+        <div id="content">
+            <div>
+                <h1>Список категорий</h1>
+                <a href="/create_category/">Создать категорию</a>
+                {% for item in objects_list %}
+                    <li>
+                        {{ item.name }} <span>Количество курсов: {{ item.courses_count() }}</span>
+                        {% if item.courses_count() %}
+                            <a href="/courses-list/?id={{ item.id }}">Показать курсы</a>
+                        {% else %}
+                            <a href="/create-course/?id={{ item.id }}">Создать новый курс</a>
+                        {% endif %}
+                    </li>
+                {% endfor %}
+            </div>
+            <br>
+            <div>
+                <li>
+                    <a href="/student-list/">Список студентов</a>
+                </li>
+                <li>
+                    <a href="/create-student/">Создать студента</a>
+                </li>
+                <li>
+                    <a href="/add-student/">Добавить студента на курс</a>
+                </li>
+            </div>
+        </div>
     </div>
-</div>
 {% endblock %}
 {% block foooter %}
     {% include "inc-footer.html" %}
